# KGB-Karst-Guide-Book

./: .gitignore  Makefile  README.md
backend/: .coverage  .env.local.example  .env.prod.example  .env.test.example  .gitignore  API_DOCUMENTATION.md  DEVELOPMENT_TIPS.md  HTML_INSPECTION_GUIDE.md  Makefile  Procfile  README.md  RENDER_DEPLOYMENT.md  SETUP_NOTES.md  START_SERVER.md  conftest.py  coverage.xml  inspect_html.py  manage.py  mypy.ini  page_source.html  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  setup_alias.sh  shell.sh
backend/boulders/: admin.py  apps.py  filters.py  mixins.py  models.py  problems_data.json  serializers.py  urls.py  utils.py  views.py
backend/boulders/data/: __init__.py
backend/boulders/migrations/: 0001_initial.py  0002_alter_boulder_options_alter_boulder_latitude_and_more.py  0002_boulderproblem_author_name_and_more.py  0003_add_polygon_boundary_to_sector.py  (+18 more)
backend/comments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/gql/: __init__.py  auth.py  dataloaders.py  rate_limiting.py  schema.py  views.py
backend/graphql/: schema.py  views.py
backend/karst_backend/: asgi.py  contextual_logger.py  formatters.py  logging_utils.py  middleware.py  settings.py  throttles.py  urls.py  wsgi.py
backend/lists/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/scripts/: export_lines_from_image.py  export_svg.py  inspect_html.py
backend/tests/: conftest.py  shared_fixtures.py  test_integration.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
(+169 files in other folders)
