[project]
name = "karst-backend"
version = "0.1.0"
description = "Boulder Problem Management App - Backend"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url==2.1.0",
    "Django>=4.2.0,<5.0.0",
    "djangorestframework>=3.14.0",
    "ariadne>=0.20.1",
    "ariadne-django>=0.3.0",
    "graphql-core>=3.2.3",
    "django-cors-headers>=4.0.0",
    "django-filter>=23.0",
    "django-extensions>=3.2.0",
    "ipython>=8.0.0",
    "Pillow>=10.0.0",
    "python-decouple>=3.8",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "black>=23.0.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "psycopg2-binary>=2.9.9",
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "factory-boy>=3.3.0",
    "ruff==0.6.8",
    "mypy==1.11.2",
    "django-stubs==5.0.1",
    "bandit==1.7.9",
    "pip-audit==2.7.3",
    "aiodataloader>=0.4.3",
    "pydantic>=2.12.5",
]
